--- a/package.json
+++ b/package.json
@@ -54,10 +54,12 @@
     "@antfu/eslint-config": "^2.22.0-beta.2",
     "@antfu/ni": "^0.21.12",
     "@antfu/utils": "^0.7.10",
+    "@types/he": "^1.2.3",
     "@types/node": "^20.14.10",
     "bumpp": "^9.4.1",
     "eslint": "^9.6.0",
     "esno": "^4.7.0",
+    "he": "^1.2.0",
     "lint-staged": "^15.2.7",
     "pnpm": "^9.4.0",
     "rimraf": "^5.0.8",
