feat: update vue2 parser

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint": "^9.6.0",
     "esno": "^4.7.0",
     "he": "^1.2.0",
+    "jsdom": "^24.1.1",
     "lint-staged": "^15.2.7",
     "pnpm": "^9.4.0",
     "rimraf": "^5.0.8",
